--- a/day-1/kind/meu-primeiro-pod.yaml
+++ b/day-1/kind/meu-primeiro-pod.yaml
@@ -1,22 +1,22 @@
 apiVersion: v1
-kind: Pods
+kind: Pod
 metadata:
   labels:
     run: nginx-giropops
     app: giropops-strigus
-  name: nginx_giropops
+    name: nginx_giropops
 spec:
   containers:
-  - image: nginx
+    image: nginx
     name: nginx_giropops
     ports:
-    - containerPort: 80
+      containerPort: 80
     resources: 
       limits: 
         memory:
         cpu: "0.5"
     requests:
-        memory: "4400MB"
-        cpu: "0,3"
-  dnsPolicy: ClusterSecond
-  restartPolicy: Always
+      memory: "4400MB"
+      cpu: "0,3"
+dnsPolicy: ClusterSecond
+restartPolicy: Always
